# RustClaw

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  config.example.toml  greet.py  install.ps1  install.sh  zeabur.json
.github/workflows/: ci.yml  release.yml
docs/: README.es.md  README.ja.md  README.ko.md  README.pt.md  README.zh-CN.md  README.zh-TW.md
docs/marketing/: awesome_lists.md  awesome_sqlite_pr.md  reddit_r_localllama.md  reddit_r_rust.md  reddit_r_selfhosted.md
src/: benchmark.rs  config.rs  error_enum.rs  graceful-shutdown.js  lib.rs  main.rs  metrics.rs  utils.rs
src/agent/: mod.rs  runner.rs
src/channels/: discord.rs  mod.rs  telegram.rs  webchat.rs
src/cli/: mod.rs
src/cron/: mod.rs
src/gateway/: connection.rs  protocol.rs  server.rs
src/kg_vis/: index.html
src/session/: embed.rs  extract.rs  graph.rs  memory.rs  mod.rs  store.rs
src/tools/: discord.rs  email.rs  exec.rs  executor.rs  fs.rs  github.rs  mcp.rs  mod.rs  search.rs  system.rs
tests/: benchmark_500.md  gen_500_questions.sh  integration.rs  integration_test.rs  performance_regression_test.sh  questions_500.txt  run_500.sh  run_benchmark.sh  system_prompt_v2.toml  test_canary.py  test_memory.py  tool_calling_benchmark.md  unit_test.rs
tests/integration/: test_memory_add_search.py
tests/results/: BENCHMARK_REPORT.md  FULL_REPORT.md  bench365_qwen25-32b-v5-pro_20260409_105002.txt  bench365_qwen25-32b-v6-rustmem_20260409_141237.txt  bench500_qwen25-32b-v2_20260408_100215.txt  bench500_qwen25-32b-v3_20260408_100632.txt  (+15 more)
(+1 files in other folders)
