[package]
name = "rustclaw"
version = "0.5.0"
edition = "2021"
description = "A lightweight Rust alternative to OpenClaw"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "net", "time", "process"] }
axum = { version = "0.7", features = ["ws"] }
tokio-tungstenite = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
config = { version = "0.14", default-features = false, features = ["toml"] }
anyhow = "1"
futures-util = "0.3"
tokio-stream = "0.1"
teloxide = { version = "0.17", default-features = false, features = ["rustls"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "cache", "rustls_backend"] }
octocrab = "0.41"
tokio-cron-scheduler = "0.11"
rusqlite = { version = "0.31", features = ["bundled"] }
imap = "2"
native-tls = "0.2"
lettre = "0.11"
rustmem = { git = "https://github.com/Adaimade/R-Mem.git" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
